{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 78,
  "lineage": "1894aeff-9e8d-4283-b863-fe498716401c",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891376960967:loadbalancer/app/mrolive-lb/2f62ab106c480bed",
            "arn_suffix": "app/mrolive-lb/2f62ab106c480bed",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mrolive-lb-11972890.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:891376960967:loadbalancer/app/mrolive-lb/2f62ab106c480bed",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mrolive-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06b0145fbb455fb02"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07a52568ea29c283d"
              },
              {
                "subnet_id": "subnet-0c4de70f047543432"
              }
            ],
            "subnets": [
              "subnet-07a52568ea29c283d",
              "subnet-0c4de70f047543432"
            ],
            "vpc_id": "vpc-0fd21265501ffe898",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_security_group.default",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891376960967:listener/app/mrolive-lb/2f62ab106c480bed/7f231895fbfcea26",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891376960967:targetgroup/mrolive-tg/34801fd09907786c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891376960967:listener/app/mrolive-lb/2f62ab106c480bed/7f231895fbfcea26",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:891376960967:loadbalancer/app/mrolive-lb/2f62ab106c480bed",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.target_group",
            "module.network.aws_security_group.default",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891376960967:targetgroup/mrolive-tg/34801fd09907786c",
            "arn_suffix": "targetgroup/mrolive-tg/34801fd09907786c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891376960967:targetgroup/mrolive-tg/34801fd09907786c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mrolive-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0fd21265501ffe898"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376960967:internet-gateway/igw-0f6a49c62893bd1f3",
            "id": "igw-0f6a49c62893bd1f3",
            "owner_id": "891376960967",
            "tags": {
              "Name": "mrolive-vpc-igw"
            },
            "tags_all": {
              "Name": "mrolive-vpc-igw"
            },
            "vpc_id": "vpc-0fd21265501ffe898"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f6a49c62893bd1f3",
            "id": "r-rtb-01e2639973a4d93aa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01e2639973a4d93aa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376960967:route-table/rtb-01e2639973a4d93aa",
            "id": "rtb-01e2639973a4d93aa",
            "owner_id": "891376960967",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mrolive-vpc-public-rt"
            },
            "tags_all": {
              "Name": "mrolive-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd21265501ffe898"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e120bbb0e42529b",
            "route_table_id": "rtb-01e2639973a4d93aa",
            "subnet_id": "subnet-0c4de70f047543432"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005e6d4c69d7b2927",
            "route_table_id": "rtb-01e2639973a4d93aa",
            "subnet_id": "subnet-07a52568ea29c283d"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376960967:security-group/sg-06b0145fbb455fb02",
            "description": "Default security group for mrolive-vpc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b0145fbb455fb02",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "mrolive-vpc-default-sg20241217171231150400000003",
            "name_prefix": "mrolive-vpc-default-sg",
            "owner_id": "891376960967",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mrolive-vpc-default-sg"
            },
            "tags_all": {
              "Name": "mrolive-vpc-default-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd21265501ffe898"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376960967:subnet/subnet-07a5c485dc4236ff9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a5c485dc4236ff9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891376960967",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mrolive-vpc-private-subnet-0"
            },
            "tags_all": {
              "Name": "mrolive-vpc-private-subnet-0"
            },
            "vpc_id": "vpc-0fd21265501ffe898"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376960967:subnet/subnet-0ed5611509740950c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed5611509740950c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891376960967",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mrolive-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "mrolive-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-0fd21265501ffe898"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376960967:subnet/subnet-0c4de70f047543432",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4de70f047543432",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891376960967",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mrolive-vpc-public-subnet-0"
            },
            "tags_all": {
              "Name": "mrolive-vpc-public-subnet-0"
            },
            "vpc_id": "vpc-0fd21265501ffe898"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376960967:subnet/subnet-07a52568ea29c283d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a52568ea29c283d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891376960967",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mrolive-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "mrolive-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-0fd21265501ffe898"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376960967:vpc/vpc-0fd21265501ffe898",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c7d5b140fd6c0589",
            "default_route_table_id": "rtb-06e1b2b9d29dd8b4f",
            "default_security_group_id": "sg-059dacbe395ac3057",
            "dhcp_options_id": "dopt-0380c1c87fe3895e2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fd21265501ffe898",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06e1b2b9d29dd8b4f",
            "owner_id": "891376960967",
            "tags": {
              "Name": "mrolive-vpc-vpc"
            },
            "tags_all": {
              "Name": "mrolive-vpc-vpc"
            }
          }
        }
      ]
    }
  ]
}